--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-title: Taller Fundamentos de Data Science con Python
-description: Materiales y notebooks : Fundamentos de Data Science con Python / 2025.
+title: "Taller Fundamentos de Data Science con Python"
+description: "Materiales y notebooks para el taller del Instituto de Matemática, Física y Estadística"
+
