--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 title: "Taller Fundamentos de Data Science con Python"
-description: "Materiales y notebooks para el taller del Instituto de Matemática, Física y Estadística"
+description: "Materiales y notebooks para el taller Fundamentos de Data Science con Python / Diciembre 2025"
+show_downloads: false
 
