--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,4 +2,6 @@ theme: jekyll-theme-cayman
 title: "Taller Fundamentos de Data Science con Python"
 description: "Materiales y notebooks para el taller Fundamentos de Data Science con Python / Diciembre 2025"
 show_downloads: false
+includes:
+  - assets/css/custom.css
 
